src/main/java/com/example/signalapp/error/SignalAppUnauthorizedException.java
package com.example.signalapp.error;

public class SignalAppUnauthorizedException extends Exception {
}
